chore: a bunch more dev work
lots of nullability cleanup