@@ -3,12 +3,10 @@ package dev.ftb.mods.ftbquests.client.gui.quests;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
-import net.minecraft.world.item.ItemStack;
 
 import dev.architectury.networking.NetworkManager;
 
@@ -27,6 +25,7 @@ import dev.ftb.mods.ftblibrary.icon.Icons;
 import dev.ftb.mods.ftblibrary.icon.ItemIcon;
 import dev.ftb.mods.ftblibrary.util.TooltipList;
 import dev.ftb.mods.ftbquests.api.ItemFilterAdapter;
+import dev.ftb.mods.ftbquests.client.FTBQuestsClient;
 import dev.ftb.mods.ftbquests.client.gui.ContextMenuBuilder;
 import dev.ftb.mods.ftbquests.integration.item_filtering.ItemMatchingSystem;
 import dev.ftb.mods.ftbquests.net.EditObjectMessage;
@@ -42,7 +41,6 @@ import dev.ftb.mods.ftbquests.util.TextUtils;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.joml.Matrix3x2fStack;
 
 public class TaskButton extends Button {
@@ -74,8 +72,8 @@ public class TaskButton extends Button {
 				task.onEditButtonClicked(questScreen);
 			} else {
 				boolean canClick = task.isValid()
-						&& questScreen.file.selfTeamData.canStartTasks(task.getQuest())
-						&& !questScreen.file.selfTeamData.isCompleted(task);
+						&& FTBQuestsClient.getClientPlayerData().canStartTasks(task.getQuest())
+						&& !FTBQuestsClient.getClientPlayerData().isCompleted(task);
 				task.client().onButtonClicked(task, this, canClick);
 			}
 		} else if (button.isRight() && questScreen.file.canEdit()) {
@@ -91,7 +89,7 @@ public class TaskButton extends Button {
 			)));
 
 			if (task instanceof ItemTask itemTask && !itemTask.getItemStack().isEmpty()) {
-				var tags = itemTask.getItemStack().getItem().builtInRegistryHolder().tags().toList();
+				var tags =  itemTask.getItemStack().getItem().builtInRegistryHolder().tags().toList();
 				if (!tags.isEmpty() && !ItemMatchingSystem.INSTANCE.isItemFilter(itemTask.getItemStack())) {
 					for (ItemFilterAdapter adapter : ItemMatchingSystem.INSTANCE.adapters()) {
 						if (adapter.hasItemTagFilter()) {
@@ -99,7 +97,7 @@ public class TaskButton extends Button {
 									ThemeProperties.RELOAD_ICON.get(),
 									b -> {
 										if (tags.size() == 1) {
-											setTagFilterAndSave(itemTask, adapter, tags.get(0));
+											setTagFilterAndSave(itemTask, adapter, tags.getFirst());
 										} else {
 											new TagSelectionScreen(tags, itemTask, adapter).openGui();
 										}
@@ -128,24 +126,6 @@ public class TaskButton extends Button {
 		}
 	}
 
-	private static String stackToString(ItemStack itemStack) {
-		StringBuilder builder = new StringBuilder(BuiltInRegistries.ITEM.getKey(itemStack.getItem()).toString());
-
-		String compData = itemStack.getComponents().stream()
-				.filter(c -> !c.value().equals(itemStack.getItem().components().get(c.type())))
-				.map(c -> c.type() + "=\"" + c.value() + "\"")
-				.collect(Collectors.joining(","));
-		if (!compData.isEmpty()) {
-			builder.append("[").append(compData).append("]");
-		}
-
-		if (itemStack.getCount() > 1) {
-			builder.append(" ").append(itemStack.getCount());
-		}
-
-		return builder.toString();
-	}
-
 	private void setTagFilterAndSave(ItemTask itemTask, ItemFilterAdapter adapter, TagKey<Item> tag) {
 		itemTask.setStackAndCount(adapter.makeTagFilterStack(tag), itemTask.getItemStack().getCount());
 
@@ -165,7 +145,7 @@ public class TaskButton extends Button {
 	public void addMouseOverText(TooltipList list) {
 		questScreen.addInfoTooltip(list, task);
 
-		TeamData teamData = questScreen.file.selfTeamData;
+		TeamData teamData = FTBQuestsClient.getClientPlayerData();
 
 		task.addMouseOverHeader(list, teamData, Minecraft.getInstance().options.advancedItemTooltips);
 
@@ -207,7 +187,7 @@ public class TaskButton extends Button {
 	@Override
 	public void drawIcon(GuiGraphics graphics, Theme theme, int x, int y, int w, int h) {
 		if (task instanceof CheckmarkTask) {
-			TeamData teamData = questScreen.file.selfTeamData;
+			TeamData teamData = FTBQuestsClient.getClientPlayerData();
 
 			var icon = ThemeProperties.CHECKMARK_TASK_INACTIVE.get(task);
 			if (teamData.isCompleted(task)) {
@@ -224,21 +204,13 @@ public class TaskButton extends Button {
 	@Override
 	public void draw(GuiGraphics graphics, Theme theme, int x, int y, int w, int h) {
 		int bs = h >= 32 ? 32 : 16;
-//		GuiHelper.setupDrawing();
 		drawBackground(graphics, theme, x, y, w, h);
 		drawIcon(graphics, theme, x + (w - bs) / 2, y + (h - bs) / 2, bs, bs);
 
-		if (questScreen.file.selfTeamData == null) {
-			return;
-		} else if (questScreen.getContextMenu().isPresent()) {
-			//return;
-		}
-
 		Matrix3x2fStack poseStack = graphics.pose();
-		if (questScreen.file.selfTeamData.isCompleted(task)) {
+		if (FTBQuestsClient.getClientPlayerData().isCompleted(task)) {
 			poseStack.pushMatrix();
 			poseStack.translate(0, 0);
-//			RenderSystem.enableBlend();
 			IconHelper.renderIcon(ThemeProperties.CHECK_ICON.get(), graphics, x + w - 9, y + 1, 8, 8);
 			poseStack.popMatrix();
 		} else {
@@ -247,7 +219,6 @@ public class TaskButton extends Button {
 				poseStack.pushMatrix();
 				poseStack.translate(x + 19F - theme.getStringWidth(buttonText) / 2F, y + 15F);
 				poseStack.scale(0.5F, 0.5F);
-//				RenderSystem.enableBlend();
 				theme.drawString(graphics, buttonText, 0, 0, Color4I.WHITE, Theme.SHADOW);
 				poseStack.popMatrix();
 			}
@@ -283,7 +254,7 @@ public class TaskButton extends Button {
 					.map(t -> getTheme().getStringWidth(t.location().toString()))
 					.max(Comparator.naturalOrder())
 					.orElse(100);
-			setSize(Math.max(titleW, w) + 20, getScreen().getGuiScaledHeight() * 3 / 4);
+			setSize(Math.max(titleW, w) + 20, getWindow().getGuiScaledHeight() * 3 / 4);
 
 			return true;
 		}
